# taguchi

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  README.md
benches/: construction.rs  gf_arithmetic.rs
docs/: architecture.md  constructions.md  roadmap.md
examples/: basic_usage.rs
src/: builder.rs  catalogue.rs  error.rs  lib.rs  parallel.rs  python.rs
src/construct/: addelman.rs  bose.rs  bose_bush.rs  bush.rs  difference_scheme.rs  hadamard.rs  mod.rs  rao_hamming.rs
src/doe/: anova.rs  main_effects.rs  mod.rs  optimal.rs  sn_ratios.rs  stats.rs  types.rs
src/gf/: element.rs  mod.rs  poly.rs  prime.rs  tables.rs
src/oa/: mod.rs  stats.rs  verify.rs
src/utils/: mod.rs  primality.rs
